examples/programming_language/src/syntax.cpp
#include "play/syntax.h"

#include "alioth/parser.h"
#include "alioth/inspect.h"
#include "nlohmann/json.hpp"

namespace play {

alioth::Syntax SyntaxOf();
alioth::ASTAttr ParseArbitraryAttribute(alioth::AST node);

std::shared_ptr<BranchNode> ParseBranch(alioth::ASTNtrm node) {
  auto n = std::make_shared<BranchNode>(*node);
  for( auto attr : alioth::AttrsOf(node, "branchs")) n->branchs.push_back(ParseArbitraryAttribute(attr));
  return n;
}
std::shared_ptr<ControlNode> ParseBreakControl(alioth::ASTNtrm node) {
  auto n = std::make_shared<ControlNode::Break>(*node);

  

  return n;
}
std::shared_ptr<ControlNode> ParseContinueControl(alioth::ASTNtrm node) {
  auto n = std::make_shared<ControlNode::Continue>(*node);

  

  return n;
}
std::shared_ptr<ControlNode> ParseReturnControl(alioth::ASTNtrm node) {
  auto n = std::make_shared<ControlNode::Return>(*node);

  n->expr = ParseArbitraryAttribute(alioth::AttrOf(node, "expr"));

  return n;
}


std::shared_ptr<ControlNode> ParseControl(alioth::ASTNtrm node) {
  std::shared_ptr<ControlNode> n;
  switch(alioth::FinalFormulaOf(node)) {
    case 32: 
      n = ParseBreakControl(node);
      break;
    case 33: 
      n = ParseContinueControl(node);
      break;
    case 34: case 35: 
      n = ParseReturnControl(node);
      break;
    
    default:
     throw std::runtime_error("unexpected formula");
  }
  
  return n;
}
std::shared_ptr<DeclareNode> ParseDeclare(alioth::ASTNtrm node) {
  auto n = std::make_shared<DeclareNode>(*node);
  n->init = ParseArbitraryAttribute(alioth::AttrOf(node, "init"));
  n->name = ParseArbitraryAttribute(alioth::AttrOf(node, "name"));
  return n;
}
std::shared_ptr<ElseNode> ParseElse(alioth::ASTNtrm node) {
  auto n = std::make_shared<ElseNode>(*node);
  for( auto attr : alioth::AttrsOf(node, "stmts")) n->stmts.push_back(ParseArbitraryAttribute(attr));
  return n;
}
std::shared_ptr<ElseifNode> ParseElseif(alioth::ASTNtrm node) {
  auto n = std::make_shared<ElseifNode>(*node);
  n->condition = ParseArbitraryAttribute(alioth::AttrOf(node, "condition"));
  for( auto attr : alioth::AttrsOf(node, "stmts")) n->stmts.push_back(ParseArbitraryAttribute(attr));
  return n;
}
std::shared_ptr<ExpressionNode> ParseBinaryExpression(alioth::ASTNtrm node) {
  auto n = std::make_shared<ExpressionNode::Binary>(*node);

  n->lhs = ParseArbitraryAttribute(alioth::AttrOf(node, "lhs"));
  n->op = ParseArbitraryAttribute(alioth::AttrOf(node, "op"));
  n->rhs = ParseArbitraryAttribute(alioth::AttrOf(node, "rhs"));

  return n;
}
std::shared_ptr<ExpressionNode> ParseMonoExpression(alioth::ASTNtrm node) {
  auto n = std::make_shared<ExpressionNode::Mono>(*node);

  n->op = ParseArbitraryAttribute(alioth::AttrOf(node, "op"));
  n->rhs = ParseArbitraryAttribute(alioth::AttrOf(node, "rhs"));

  return n;
}
std::shared_ptr<ExpressionNode> ParseSubExpression(alioth::ASTNtrm node) {
  auto n = std::make_shared<ExpressionNode::Sub>(*node);

  n->expr = ParseArbitraryAttribute(alioth::AttrOf(node, "expr"));

  return n;
}
std::shared_ptr<ExpressionNode> ParseValueExpression(alioth::ASTNtrm node) {
  auto n = std::make_shared<ExpressionNode::Value>(*node);

  n->boolean = ParseArbitraryAttribute(alioth::AttrOf(node, "boolean"));
  n->null = ParseArbitraryAttribute(alioth::AttrOf(node, "null"));
  n->number = ParseArbitraryAttribute(alioth::AttrOf(node, "number"));
  n->string = ParseArbitraryAttribute(alioth::AttrOf(node, "string"));

  return n;
}
std::shared_ptr<ExpressionNode> ParseVarExpression(alioth::ASTNtrm node) {
  auto n = std::make_shared<ExpressionNode::Var>(*node);

  n->name = ParseArbitraryAttribute(alioth::AttrOf(node, "name"));

  return n;
}


std::shared_ptr<ExpressionNode> ParseExpression(alioth::ASTNtrm node) {
  std::shared_ptr<ExpressionNode> n;
  switch(alioth::FinalFormulaOf(node)) {
    case 41: case 43: case 44: case 46: case 47: case 49: case 50: case 51: case 53: case 54: case 55: 
      n = ParseBinaryExpression(node);
      break;
    case 56: case 57: case 58: 
      n = ParseMonoExpression(node);
      break;
    case 59: 
      n = ParseSubExpression(node);
      break;
    case 61: case 62: case 63: case 64: case 65: 
      n = ParseValueExpression(node);
      break;
    case 60: 
      n = ParseVarExpression(node);
      break;
    
    default:
     throw std::runtime_error("unexpected formula");
  }
  
  return n;
}
std::shared_ptr<FunctionNode> ParseFunction(alioth::ASTNtrm node) {
  auto n = std::make_shared<FunctionNode>(*node);
  n->name = ParseArbitraryAttribute(alioth::AttrOf(node, "name"));
  for( auto attr : alioth::AttrsOf(node, "params")) n->params.push_back(ParseArbitraryAttribute(attr));
for( auto attr : alioth::AttrsOf(node, "stmts")) n->stmts.push_back(ParseArbitraryAttribute(attr));
  return n;
}
std::shared_ptr<IfNode> ParseIf(alioth::ASTNtrm node) {
  auto n = std::make_shared<IfNode>(*node);
  n->condition = ParseArbitraryAttribute(alioth::AttrOf(node, "condition"));
  for( auto attr : alioth::AttrsOf(node, "stmts")) n->stmts.push_back(ParseArbitraryAttribute(attr));
  return n;
}
std::shared_ptr<IterateNode> ParseIterate(alioth::ASTNtrm node) {
  auto n = std::make_shared<IterateNode>(*node);
  n->cond = ParseArbitraryAttribute(alioth::AttrOf(node, "cond"));
  n->ctrl = ParseArbitraryAttribute(alioth::AttrOf(node, "ctrl"));
  n->init = ParseArbitraryAttribute(alioth::AttrOf(node, "init"));
  for( auto attr : alioth::AttrsOf(node, "stmts")) n->stmts.push_back(ParseArbitraryAttribute(attr));
  return n;
}
std::shared_ptr<PlayNode> ParsePlay(alioth::ASTNtrm node) {
  auto n = std::make_shared<PlayNode>(*node);
  for( auto attr : alioth::AttrsOf(node, "stmts")) n->stmts.push_back(ParseArbitraryAttribute(attr));
  return n;
}
std::shared_ptr<StmtNode> ParseStmt(alioth::ASTNtrm node) {
  auto n = std::make_shared<StmtNode>(*node);
  n->branch = ParseArbitraryAttribute(alioth::AttrOf(node, "branch"));
  n->control = ParseArbitraryAttribute(alioth::AttrOf(node, "control"));
  n->declare = ParseArbitraryAttribute(alioth::AttrOf(node, "declare"));
  n->expression = ParseArbitraryAttribute(alioth::AttrOf(node, "expression"));
  n->function = ParseArbitraryAttribute(alioth::AttrOf(node, "function"));
  n->iterate = ParseArbitraryAttribute(alioth::AttrOf(node, "iterate"));
  return n;
}


alioth::ASTAttr ParseArbitraryAttribute(alioth::AST node) {
  if(node) switch(node->id) {
    case 48: return ParseBranch(alioth::AsNtrm(node));
    case 50: return ParseControl(alioth::AsNtrm(node));
    case 47: return ParseDeclare(alioth::AsNtrm(node));
    case 57: return ParseElse(alioth::AsNtrm(node));
    case 58: return ParseElseif(alioth::AsNtrm(node));
    case 52: return ParseExpression(alioth::AsNtrm(node));
    case 51: return ParseFunction(alioth::AsNtrm(node));
    case 55: return ParseIf(alioth::AsNtrm(node));
    case 49: return ParseIterate(alioth::AsNtrm(node));
    case 45: return ParsePlay(alioth::AsNtrm(node));
    case 46: return ParseStmt(alioth::AsNtrm(node));
    
    default: break;
  }

  return node;
}

std::shared_ptr<PlayNode> ParsePlay(alioth::Doc source) {
  auto syntax = SyntaxOf();
  auto parser = alioth::Parser(syntax, source);
  auto root = parser.Parse();
  auto play = ParsePlay(AsNtrm(alioth::AttrOf(root, "play")));
  play->root = root;
  return play;
}

alioth::Syntax SyntaxOf() {
  static uint8_t binary[] = {
